kqed_dev4/src/objects/NotePad__c.object
<CustomObject>
    <fields>
        <fullName>Account_Household__c</fullName>
        <label>Household</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>NotePads</relationshipLabel>
        <relationshipName>NotePads1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>NotePads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Body__c</fullName>
        <label>TA Long Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>NotePads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Note_Type__c</fullName>
        <label>Note Type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Summary__c</fullName>
        <label>TA Summary</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>batch_process_count__c</fullName>
        <description>This field is used for Apex batch processing for post processing ETL information</description>
        <label>Batch Process Count</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>contact_date__c</fullName>
        <label>Contact Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ta_interaction_id__c</fullName>
        <externalId>true</externalId>
        <label>ta_interaction_id</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>NotePad</label>
    <nameField>
        <label>TA Contact Type Description</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>NotePads</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>